# Helloword-otus

./: .gitignore  .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  Doxyfile  README.md  bintray.json.in  lib.cpp  lib.h  main.cpp  test_main.cpp  version.h.in
